--- a/snippets/products-subscription-block.liquid
+++ b/snippets/products-subscription-block.liquid
@@ -16,7 +16,7 @@
         </div>
         
         <h2 class="subscription-block-title">
-          Subscribe & Save 20% + Free Shipping
+          Subscribe & Save 20%
         </h2>
         
         <p class="subscription-block-description">
@@ -24,7 +24,7 @@
         </p>
         
         <p class="subscription-block-subdescription">
-          You save 20% every shipment • Free shipping • Quarterly reset
+          You save 20% every shipment • Quarterly reset
         </p>
         
         <div class="subscription-formula-selector">
