--- a/templates/page.partner-signup.liquid
+++ b/templates/page.partner-signup.liquid
@@ -1,5 +1,5 @@
 {% comment %}
-  Partner Signup Page - Complete Shopify Integration
+  Partner Signup Page - Application form (reached from mastercase landing)
   Handle: partner-signup
   Integrates with Shopify Customer API and Metafields
 {% endcomment %}
