--- a/templates/page.wholesale-page.liquid
+++ b/templates/page.wholesale-page.liquid
@@ -16,7 +16,7 @@
       <div class='samitaWS-quickOrderForm' data-id='bmV3'></div>
 
       <div style="margin-top: 32px; display:flex; gap:12px; justify-content:center; flex-wrap:wrap;">
-        <a class="btn-secondary btn-large" href="/pages/mastercase">View Master Case Program</a>
+        <a class="btn-secondary btn-large" href="/pages/mastercase">View Wholesale Program</a>
         <a class="btn-secondary btn-large" href="{{ routes.account_url }}">View Account</a>
       </div>
     {% else %}
