--- a/sections/featured-testimonial.liquid
+++ b/sections/featured-testimonial.liquid
@@ -1,5 +1,5 @@
 {% comment %}
-  Featured Testimonial Section - Adam R. Story
+  Featured Testimonial Section - Adam and Sonia R. Story
 {% endcomment %}
 
 <section class="featured-testimonial-section">
@@ -19,13 +19,14 @@
                 
                 <p class="featured-testimonial-body">Continuing to explore alternative options, we looked into vibration and frequency devices and observed a reduction in her anxiety when exposed to specific frequencies.</p>
                 
-                <p class="featured-testimonial-highlight">When we learned about the Love Brand detergent, we requested to try the prototype. We washed Lydia's bedding with the pods, and for the first time in over a decade, she went a full week without a single seizure. We continued washing her bedding every few days, and during the second week, she had only two seizures. This was the lowest two-week span we have ever documented and the best honeymoon period we have experienced with any new treatment.</p>
+                <p class="featured-testimonial-highlight">"When we learned about the Love Brand detergent, we requested to try the prototype. We washed Lydia's bedding with the pods, and for the first time in over a decade, she went a full week without a single seizure. We continued washing her bedding every few days, and during the second week, she had only two seizures. This was the lowest two-week span we have ever documented and the best honeymoon period we have experienced with any new treatment."</p>
             </div>
             
             <div class="featured-testimonial-author">
-                <span class="testimonial-name">Adam R.</span>
+                <span class="testimonial-name">Adam and Sonia R.</span>
                 <span class="testimonial-location">Wisconsin</span>
             </div>
+            <p class="featured-testimonial-fda">These statements have not been evaluated by the Food and Drug Administration. This product is not intended to diagnose, treat, cure, or prevent any disease.</p>
         </div>
     </div>
 </section>
